date Version 3.00.23 (Beta 3)
+ Added wxGridBagSizer. This closes FS#58.
   Cannot use wxGBS as the first sizer in a form until the object model improves.
^ Spacer now uses sizeritem, instead of being standalone. 
   This forced a project version uprev to 1.6
^ Converted all wxLogDebug to Debug::Print so __WXFB_DEBUG__ is used to 
   determine whether or not to log.

02-23-2007 Version 3.00.22 (Beta 3)
+ Added most of the higher level events for wxTopLevelWindows and wxWindow.
^ Updated the event layout and used event inhertitance to get common events
  throughout the controls.

02-22-2007 Version 3.00.21 (Beta 3)
+ Added the 'Additional' controls events.
* Prevent event handler duplication when there are different event handlers
  with the same function (but it doesn't check that the event class is the
  same).
* Fixed FS#98 - Non-existing files are removed from the recent files list.
+ Added wxEVT_UPDATE_UI event to all controls (if it has a sense). 

02-18-2007 Version 3.00.20 (Beta 3)
* Fixed FS#93 — "wxGrid -> Object type unknown in XRC."
* Fixed FS#94 — "Typo in code generation which includes <wx/imaglist.h>."
* Fixed FS#96 — "No XRC for wxStdDialogButtonSizer."
* Added wxRadioBox label to XRC output.
^ "View:XRC Window" now only generates the form that it will display.

02-12-2007 Version 3.00.19 (Beta 3)
* Fixed FS#89 — "wxSpinCtrl cannot have negative min/max value."
* Fixed FS#90 — "Can't change the source of a bitmap."
* Fixed FS#91 — "ID's that start with 'wx' are not properly generated."
* MainFrame is updated when a property is changed, even if the object
  doesn't match with the selected object (i.e. sizeritem obj).
^ wxFrame title bar color now using ActiveCaption.

02-01-2007  Version 3.00.18 (Beta 3)
* Undo command of MoveHierarchy (move left) now restores the position of
  the object.
* Fixed FS#86 — "Object-tree context-menu "Copy" command has no effect"
+ Implemented FS#6 — "icons and bitmaps support"